userdatarunnig/tempuser_c4ca4238a0b923820dcc509a6f75849b/NX6989q/error.log
  File "../../userdatarunnig/tempuser_c4ca4238a0b923820dcc509a6f75849b/NX6989q/filecode.py", line 3
    
               ^
SyntaxError: unexpected EOF while parsing
